--- a/vignettes/D2_gmod_decision_tree.Rmd
+++ b/vignettes/D2_gmod_decision_tree.Rmd
@@ -2,7 +2,7 @@
 title: "Introduction to Decision Trees"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Introduction to Decision Trees}
+  %\VignetteIndexEntry{D2 Introduction to Decision Trees}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
