--- a/vignettes/M0_getting_started_markov_gmod.Rmd
+++ b/vignettes/M0_getting_started_markov_gmod.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "gmod: getting started with building Markov models"
+title: "M0 gmod: getting started with building Markov models"
 output: 
   rmarkdown::html_vignette:
     toc: true
