--- a/vignettes/M2_gmod_advanced_markov_tutorial.Rmd
+++ b/vignettes/M2_gmod_advanced_markov_tutorial.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Advanced Markov Tutorial for Time Dependent Markov Model"
+title: "M2 Advanced Markov Tutorial for Time Dependent Markov Model"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{M2 Advanced Markov Tutorial for Time Dependent Markov Model}
