--- a/vignettes/M2_gmod_advanced_markov_tutorial.Rmd
+++ b/vignettes/M2_gmod_advanced_markov_tutorial.Rmd
@@ -322,7 +322,7 @@ The output is the structure of the model including the formulae.
 To evaluate the model, we run `gmod_evaluate()` which returns the numerical outcomes. 
 ```{r}
 model_struc <- gmod_gen_model_function(mygmod)
-#model_res
+model_struc
 ```
 
 ```{r}
